--- a/css/estilo-mod.css
+++ b/css/estilo-mod.css
@@ -65,7 +65,9 @@
 	visibility: visible;
 }
 #sgac #conf_borrar_menu,
-#sgac #conf_borrar_menu:target{
+#sgac #conf_borrar_menu:target,
+#sgac #conf_borrar_sub,
+#sgac #conf_borrar_sub:target{
 	width:80%;
 	top:25%;
 	left:10%;
