Modificando el tamaño de la letra de la cabecera

--- a/css/estilo-gen.css
+++ b/css/estilo-gen.css
@@ -164,6 +164,7 @@
 			text-decoration:none;
 			color:#EEE;
 			margin-top:.2cm;
+			font-size:10pt;
 		}
 	/*BLOQUE:Contenedor---------------------------------------------------------*/
 		#sgac section.contenedor{
