Configurando el borrado de articulos

--- a/css/estilo-mod.css
+++ b/css/estilo-mod.css
@@ -67,7 +67,9 @@
 #sgac #conf_borrar_menu,
 #sgac #conf_borrar_menu:target,
 #sgac #conf_borrar_sub,
-#sgac #conf_borrar_sub:target{
+#sgac #conf_borrar_sub:target,
+#sgac #conf_borrar_art,
+#sgac #conf_borrar_art:target{
 	width:80%;
 	top:25%;
 	left:10%;
