Continuacion del configurado de las infos. Se tiene un control mas estable sobre estas, ahora se les puede agregar diseño, pero aun solo se ha usado el disegno 1

--- a/css/estilo-mi_info.css
+++ b/css/estilo-mi_info.css
@@ -1,8 +1,16 @@
-#sgac div.herramientas_inf{
-	float:left;
-	background:none;
-	padding:.2cm;
-	display:inline-block;
+#sgac articles.bloques_infos{
+	padding:1.4cm;
+	display:block;
+	float:none;
 	overflow:hidden;
-	text-align:center;
+}
+#sgac articles.bloques_infos section.titulo{
+	float:left;
+	width:25%;
+	display:inline-block;
+}
+#sgac articles.bloques_infos section.contenido{
+	float:left;
+	width:65%;
+	display:inline-block;
 }
