--- a/css/estilo-mod.css
+++ b/css/estilo-mod.css
@@ -65,11 +65,24 @@
 	visibility: visible;
 }
 #sgac #conf_borrar_gen,
-#sgac #conf_borrar_gen:target{
+#sgac #conf_borrar_gen:target,
+#sgac #conf_inf,
+#sgac #conf_inf:target{
 	width:80%;
 	top:25%;
 	left:10%;
 	right:10%;
+	margin:0;
+	opacity: 1;
+	display:none;
+	visibility: visible;
+}
+#sgac #conf_inf,
+#sgac #conf_inf:target{
+	width:100%;
+	top:1px;
+	left:0%;
+	right:0%;
 	margin:0;
 	opacity: 1;
 	display:none;
