--- a/css/estilo-mi_info.css
+++ b/css/estilo-mi_info.css
@@ -1,12 +1,8 @@
 #sgac div.herramientas_inf{
 	float:left;
-	background:#546;
+	background:none;
 	padding:.2cm;
 	display:inline-block;
 	overflow:hidden;
 	text-align:center;
-}
-#sgac div.tabla_gen div.cam.2 textarea{
-	height:100px;
-	width:500px;
 }
