--- a/css/estilo-mod.css
+++ b/css/estilo-mod.css
@@ -65,7 +65,9 @@
 	visibility: visible;
 }
 #sgac #conf_borrar_gen,
-#sgac #conf_borrar_gen:target{
+#sgac #conf_borrar_gen:target,
+#sgac #conf_editar_gen,
+#sgac #conf_editar_gen:target{
 	width:80%;
 	top:25%;
 	left:10%;
@@ -74,17 +76,4 @@
 	opacity: 1;
 	display:none;
 	visibility: visible;
-}
-#sgac #conf_inf,
-#sgac #conf_inf:target{
-	width:100%;
-	top:1px;
-	left:0%;
-	right:0%;
-	margin:0;
-	opacity: 1;
-	display:none;
-	visibility: visible;
-	overflow:scroll;
-	height:400px;
 }
