--- a/css/estilo-mod.css
+++ b/css/estilo-mod.css
@@ -46,6 +46,7 @@
 }
 #sgac .gen_modal  .copy {
 	background: #fff;
+	overflow:auto;
 }
  
 #sgac .gen_modal  .overlay {
@@ -58,6 +59,9 @@
 	width: 100%;
 	z-index: 10;
 }
+#sgac .gen_modal  .div_ediciones{
+	display:none;
+}
 /*Targets_______*/
 #sgac #m_int:target {
 	opacity: 1;
@@ -69,7 +73,7 @@
 #sgac #conf_editar_gen,
 #sgac #conf_editar_gen:target{
 	width:80%;
-	top:25%;
+	top:20%;
 	left:10%;
 	right:10%;
 	margin:0;
