--- a/css/estilo-mod.css
+++ b/css/estilo-mod.css
@@ -1,4 +1,4 @@
-#sgac .gen_modal {
+#quickCarrot .gen_modal {
 	opacity: 0;
 	position:fixed;
 	top:-50%;
@@ -11,45 +11,45 @@
 	-webkit-transition: all 1s ease-in-out;
 	z-index:10000;
 }
-#sgac .gen_modal  .header,
-#sgac .gen_modal  .footer {
+#quickCarrot .gen_modal  .header,
+#quickCarrot .gen_modal  .footer {
 	border-bottom: 1px solid #e7e7e7;
 	border-radius: 5px 5px 0 0;
 }
-#sgac .gen_modal .footer {
+#quickCarrot .gen_modal .footer {
 	border:none;
 	border-top: 1px solid #e7e7e7;
 	border-radius: 0 0 5px 5px;
 	background:#ddd;
 	overflow:hidden;
 }
-#sgac .gen_modal  h2 {
+#quickCarrot .gen_modal  h2 {
 	margin:0;
 }
-#sgac .gen_modal  .btn-gen,
-#sgac .gen_modal  .btn-gen2{
+#quickCarrot .gen_modal  .btn-gen,
+#quickCarrot .gen_modal  .btn-gen2{
 	float:none;
 }
-#sgac .gen_modal  section.cont_a{
+#quickCarrot .gen_modal  section.cont_a{
 	text-align:right;
 }
-#sgac .gen_modal  .copy,
-#sgac .gen_modal  .header, 
-#sgac .gen_modal .footer {
+#quickCarrot .gen_modal  .copy,
+#quickCarrot .gen_modal  .header, 
+#quickCarrot .gen_modal .footer {
 	padding:15px;
 }
-#sgac .modal-content {
+#quickCarrot .modal-content {
 	background: #f7f7f7;
 	position: relative;
 	z-index: 20;
 	border-radius:5px;
 }
-#sgac .gen_modal  .copy {
+#quickCarrot .gen_modal  .copy {
 	background: #fff;
 	overflow:auto;
 }
  
-#sgac .gen_modal  .overlay {
+#quickCarrot .gen_modal  .overlay {
 	background-color: #000;
 	background: rgba(0,0,0,.5);
 	height: 100%;
@@ -59,19 +59,19 @@
 	width: 100%;
 	z-index: 10;
 }
-#sgac .gen_modal  .div_ediciones{
+#quickCarrot .gen_modal  .div_ediciones{
 	display:none;
 }
 /*Targets_______*/
-#sgac #m_int:target {
+#quickCarrot #m_int:target {
 	opacity: 1;
 	top:80%;
 	visibility: visible;
 }
-#sgac #conf_borrar_gen,
-#sgac #conf_borrar_gen:target,
-#sgac #conf_editar_gen,
-#sgac #conf_editar_gen:target{
+#quickCarrot #conf_borrar_gen,
+#quickCarrot #conf_borrar_gen:target,
+#quickCarrot #conf_editar_gen,
+#quickCarrot #conf_editar_gen:target{
 	width:80%;
 	top:20%;
 	left:10%;
