--- a/css/estilo-gen.css
+++ b/css/estilo-gen.css
@@ -61,31 +61,31 @@
 				border:1px solid #f60;
 			}
 			/*Blanco*/
-				#quickCarrot i.img_col.blan.menus{background:url(../images/16x16_blanco/menus.png)no-repeat center;}
-				#quickCarrot i.img_col.blan.articulos{background:url(../images/16x16_blanco/articulos.png)no-repeat center;}
-				#quickCarrot i.img_col.blan.informaciones{background:url(../images/16x16_blanco/informaciones.png)no-repeat center;}
-				#quickCarrot i.img_col.blan.diagnostico{background:url(../images/16x16_blanco/diagnostico.png)no-repeat center;}
-				#quickCarrot i.img_col.blan.estadisticas{background:url(../images/16x16_blanco/estadisticas.png)no-repeat center;}
-				#quickCarrot i.img_col.blan.ajustes{background:url(../images/16x16_blanco/ajustes.png)no-repeat center;}
-				#quickCarrot i.img_col.blan.ayuda{background:url(../images/16x16_blanco/ayuda.png)no-repeat center;}
-				#quickCarrot i.img_col.blan.acercade{background:url(../images/16x16_blanco/acercade.png)no-repeat center;}
-				#quickCarrot i.img_col.blan.borrar{background:url(../images/16x16_blanco/borrar.png)no-repeat center;}
-				#quickCarrot i.img_col.blan.editar{background:url(../images/16x16_blanco/editar.png)no-repeat center;}
-				#quickCarrot i.img_col.blan.actualizar{background:url(../images/16x16_blanco/actualizar.png)no-repeat center;}
-				#quickCarrot i.img_col.blan.subir{background:url(../images/16x16_blanco/subir.png)no-repeat center;}
+				#quickCarrot i.img_col.blan.menus{background:url('../images/16x16_blanco/menus.png')no-repeat center;}
+				#quickCarrot i.img_col.blan.articulos{background:url('../images/16x16_blanco/articulos.png')no-repeat center;}
+				#quickCarrot i.img_col.blan.informaciones{background:url('../images/16x16_blanco/informaciones.png')no-repeat center;}
+				#quickCarrot i.img_col.blan.diagnostico{background:url('../images/16x16_blanco/diagnostico.png')no-repeat center;}
+				#quickCarrot i.img_col.blan.estadisticas{background:url('../images/16x16_blanco/estadisticas.png')no-repeat center;}
+				#quickCarrot i.img_col.blan.ajustes{background:url('../images/16x16_blanco/ajustes.png')no-repeat center;}
+				#quickCarrot i.img_col.blan.ayuda{background:url('../images/16x16_blanco/ayuda.png')no-repeat center;}
+				#quickCarrot i.img_col.blan.acercade{background:url('../images/16x16_blanco/acercade.png')no-repeat center;}
+				#quickCarrot i.img_col.blan.borrar{background:url('../images/16x16_blanco/borrar.png')no-repeat center;}
+				#quickCarrot i.img_col.blan.editar{background:url('../images/16x16_blanco/editar.png')no-repeat center;}
+				#quickCarrot i.img_col.blan.actualizar{background:url('../images/16x16_blanco/actualizar.png')no-repeat center;}
+				#quickCarrot i.img_col.blan.subir{background:url('../images/16x16_blanco/subir.png')no-repeat center;}
 			/*Negro*/
-				#quickCarrot i.img_col.neg.menus{background:url(../images/16x16_negro/menus.png)no-repeat center;}
-				#quickCarrot i.img_col.neg.articulos{background:url(../images/16x16_negro/articulos.png)no-repeat center;}
-				#quickCarrot i.img_col.neg.informaciones{background:url(../images/16x16_negro/informaciones.png)no-repeat center;}
-				#quickCarrot i.img_col.neg.diagnostico{background:url(../images/16x16_negro/diagnostico.png)no-repeat center;}
-				#quickCarrot i.img_col.neg.estadisticas{background:url(../images/16x16_negro/estadisticas.png)no-repeat center;}
-				#quickCarrot i.img_col.neg.ajustes{background:url(../images/16x16_negro/ajustes.png)no-repeat center;}
-				#quickCarrot i.img_col.neg.ayuda{background:url(../images/16x16_negro/ayuda.png)no-repeat center;}
-				#quickCarrot i.img_col.neg.acercade{background:url(../images/16x16_negro/acercade.png)no-repeat center;}
-				#quickCarrot i.img_col.neg.borrar{background:url(../images/16x16_negro/borrar.png)no-repeat center;}
-				#quickCarrot i.img_col.neg.editar{background:url(../images/16x16_negro/editar.png)no-repeat center;}
-				#quickCarrot i.img_col.neg.actualizar{background:url(../images/16x16_negro/actualizar.png)no-repeat center;}
-				#quickCarrot i.img_col.neg.subir{background:url(../images/16x16_negro/subir.png)no-repeat center;}
+				#quickCarrot i.img_col.neg.menus{background:url('../images/16x16_negro/menus.png')no-repeat center;}
+				#quickCarrot i.img_col.neg.articulos{background:url('../images/16x16_negro/articulos.png')no-repeat center;}
+				#quickCarrot i.img_col.neg.informaciones{background:url('../images/16x16_negro/informaciones.png')no-repeat center;}
+				#quickCarrot i.img_col.neg.diagnostico{background:url('../images/16x16_negro/diagnostico.png')no-repeat center;}
+				#quickCarrot i.img_col.neg.estadisticas{background:url(.'./images/16x16_negro/estadisticas.png')no-repeat center;}
+				#quickCarrot i.img_col.neg.ajustes{background:url('../images/16x16_negro/ajustes.png')no-repeat center;}
+				#quickCarrot i.img_col.neg.ayuda{background:url('../images/16x16_negro/ayuda.png')no-repeat center;}
+				#quickCarrot i.img_col.neg.acercade{background:url('../images/16x16_negro/acercade.png')no-repeat center;}
+				#quickCarrot i.img_col.neg.borrar{background:url('../images/16x16_negro/borrar.png')no-repeat center;}
+				#quickCarrot i.img_col.neg.editar{background:url('../images/16x16_negro/editar.png')no-repeat center;}
+				#quickCarrot i.img_col.neg.actualizar{background:url(.'./images/16x16_negro/actualizar.png')no-repeat center;}
+				#quickCarrot i.img_col.neg.subir{background:url('../images/16x16_negro/subir.png')no-repeat center;}
 		/*Tabla general*/
 			#quickCarrot div.tabla_gen{
 				padding:.7cm .5cm .7cm .5cm;
@@ -317,26 +317,3 @@
 			padding:.7cm;
 			text-align:center;
 		}
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
