--- a/css/estilo-gen.css
+++ b/css/estilo-gen.css
@@ -78,13 +78,13 @@
 				#quickCarrot i.img_col.neg.articulos{background:url('../images/16x16_negro/articulos.png')no-repeat center;}
 				#quickCarrot i.img_col.neg.informaciones{background:url('../images/16x16_negro/informaciones.png')no-repeat center;}
 				#quickCarrot i.img_col.neg.diagnostico{background:url('../images/16x16_negro/diagnostico.png')no-repeat center;}
-				#quickCarrot i.img_col.neg.estadisticas{background:url(.'./images/16x16_negro/estadisticas.png')no-repeat center;}
+				#quickCarrot i.img_col.neg.estadisticas{background:url('../images/16x16_negro/estadisticas.png')no-repeat center;}
 				#quickCarrot i.img_col.neg.ajustes{background:url('../images/16x16_negro/ajustes.png')no-repeat center;}
 				#quickCarrot i.img_col.neg.ayuda{background:url('../images/16x16_negro/ayuda.png')no-repeat center;}
 				#quickCarrot i.img_col.neg.acercade{background:url('../images/16x16_negro/acercade.png')no-repeat center;}
 				#quickCarrot i.img_col.neg.borrar{background:url('../images/16x16_negro/borrar.png')no-repeat center;}
 				#quickCarrot i.img_col.neg.editar{background:url('../images/16x16_negro/editar.png')no-repeat center;}
-				#quickCarrot i.img_col.neg.actualizar{background:url(.'./images/16x16_negro/actualizar.png')no-repeat center;}
+				#quickCarrot i.img_col.neg.actualizar{background:url('../images/16x16_negro/actualizar.png')no-repeat center;}
 				#quickCarrot i.img_col.neg.subir{background:url('../images/16x16_negro/subir.png')no-repeat center;}
 		/*Tabla general*/
 			#quickCarrot div.tabla_gen{
