Agregada la funcionalidad de poder cargarse un menu de QuickCarrot guiado por la URL
index.php:
+ Se le agrego a todos las etiquetas a del nav cabecera el atributo href que apunta hacia su direcion (Ejemplo: #3, direccion 3)

estilo-gen.css
+ Arreglado el ancho de las etiquetas a (anteriormente mencionadas) a un 85%
	* Esto facilita que el usuario de click efectivamente a los enlaces y estos carguen los hash en la url

func-gen.js:
- Antes cada vez que se recargaba la pagina, se mostraba el primer menu de QuickCarrot

+ Reorganizado de ciertas partes de codigo, comentarios eficientes
+ Se elimino la abertura automatica del menu <<menus>> de QuickCarrot
+ Se añadio la funcion abreMenu
	* Esta gestiona el hash eliminando valores restantes, quedando solo numeros
	* Llama a la lista de menus para comprobar si el numero de hash recibido esta acorde a la lista
	* Se abre el menu correspondiente de QuickCarrot

--- a/css/estilo-gen.css
+++ b/css/estilo-gen.css
@@ -226,6 +226,7 @@
 			color:#EEE;
 			margin-top:.2cm;
 			font-size:10pt;
+			width: 85%;
 		}
 	/*BLOQUE:Contenedor---------------------------------------------------------*/
 		#quickCarrot section.contenedor{
